[package]
edition = "2021"
name = "BevyLearning"
resolver = "2"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.15.3", features = ["dynamic_linking"]}
rand = "0.9.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
